build(ci): separate issues and pull requests integration report

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "test:leaks": "jest --detect-leaks",
     "test:ci": "jest --bail=1 --ci",
     "test:ci:coverage": "jest --collect-coverage --bail=1 --ci",
-    "test:ci:coverage:integration": "npm run test:ci:coverage -- tests",
+    "test:ci:coverage:integration:issues": "npm run test:ci:coverage -- tests/issues",
+    "test:ci:coverage:integration:pull-requests": "npm run test:ci:coverage -- tests/pull-requests",
     "test:ci:coverage:unit": "npm run test:ci:coverage -- src",
     "test:clear-cache": "jest --clear-cache",
     "\n# LINT SCRIPTS:": "",
