--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
           debug: true
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-  IntegrationCoverageCodecov:
+  IssuesIntegrationCoverageCodecov:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
@@ -130,20 +130,67 @@ jobs:
         id: cache-jest
         uses: actions/cache@v2
         env:
-          cache-name: cache-jest-integration
+          cache-name: cache-jest-integration-issues
         with:
           path: .cache-jest
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/jest.config.js') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
       - name: Test
-        run: npm run test:ci:coverage:integration
+        run: npm run test:ci:coverage:integration:issues
       - name: Coverage
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
-          flags: integration
+          flags: integration-issues
+          name: Stale
+  PullRequestsIntegrationCoverageCodecov:
+    needs: PreJob
+    if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version:
+          - 12.22.x
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm ci
+      - name: Cache Jest
+        id: cache-jest
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-jest-integration-pull-requests
+        with:
+          path: .cache-jest
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/jest.config.js') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-
+      - name: Test
+        run: npm run test:ci:coverage:integration:pull-requests
+      - name: Coverage
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          flags: integration-pull-requests
           name: Stale
   UnitCoverageCodecov:
     needs: PreJob
