--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -42,3 +42,26 @@ jobs:
           issue-close-comment: |
             :warning: **Warning!** :warning:
             This issue was closed due to a lack of activity for 10 days after it was stale. :worried:
+          pull-request-days-before-stale: 30
+          pull-request-days-before-close: 10
+          pull-request-ignore-any-labels: |
+            frozen
+            dependencies
+          pull-request-ignore-any-assignees: |
+            C0ZEN
+          pull-request-stale-comment: |
+            [~frozen]: https://img.shields.io/badge/-frozen-D6FFFA.svg
+            [~dependency-fix]: https://img.shields.io/badge/-dependency%20fix-c44569.svg
+            [~dependencies]: https://img.shields.io/badge/-dependencies-1e3799.svg
+            [~help-wanted]: https://img.shields.io/badge/-help%20wanted-63cdda.svg
+
+            :warning: **Warning!** :warning:
+            This pull request was marked as stale due to a lack of activity for 30 days. :worried:
+            In 10 days, this pull request will be closed if there is no more activity during this period. :grimacing:
+
+            If you want to avoid this stale state you could add one of these labels:
+            - [![label: frozen][~frozen]](https://github.com/Sonia-corporation/stale/labels/frozen)
+            - [![label: dependencies][~dependencies]](https://github.com/Sonia-corporation/stale/labels/dependencies)
+          pull-request-close-comment: |
+            :warning: **Warning!** :warning:
+            This pull request was closed due to a lack of activity for 10 days after it was stale. :worried:
