--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "test:watch": "jest --watch-all",
     "test:watch:no-cache": "jest --watch-all --no-cache",
     "test:leaks": "jest --detect-leaks",
-    "test:ci": "jest --bail=1 --ci",
-    "test:ci:coverage": "jest --collect-coverage --bail=1 --ci",
+    "test:ci": "jest --bail=1 --ci --maxWorkers=100%",
+    "test:ci:coverage": "npm run test:ci -- --collect-coverage",
     "test:ci:coverage:integration:issues": "npm run test:ci:coverage -- tests/issues",
     "test:ci:coverage:integration:pull-requests": "npm run test:ci:coverage -- tests/pull-requests",
     "test:ci:coverage:unit": "npm run test:ci:coverage -- src",
