feat(pull-request): add new input `pull-request-delete-branch-after-close`
When a pull request is closed by the processing, if the option is enabled and the dry-run is disabled, the related branch will be removed
A new output was also added to track the number of deleted pull request branches

--- a/action.yml
+++ b/action.yml
@@ -105,6 +105,10 @@ inputs:
     description: 'The comment that will be sent once the pull request is close (keep empty to not send a comment).'
     required: false
     default: ''
+  pull-request-delete-branch-after-close:
+    description: 'Delete the branch when the processing close the pull request.'
+    required: false
+    default: 'false'
 runs:
   using: 'node12'
   main: 'dist/index.js'
