--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -45,6 +45,6 @@ exclude_patterns:
   - 'coverage/'
   - 'node_modules/'
   - '.eslintcache'
-  - '**.spec.ts'
+  - '**/*.spec.ts'
   - '**/__mocks__/'
   - 'dist/'
