feat(processing): add new input to enable or disable the processing
Add the `issue-processing` and `pull-request-processing` inputs.
When enabled, the processing occurs as expected.
When disabled, the processing will be skipped.
Closes #277

--- a/action.yml
+++ b/action.yml
@@ -60,6 +60,10 @@ inputs:
     description: 'A list of labels added when the processing stale the issue (multiline).'
     required: false
     default: ''
+  issue-processing:
+    description: 'Allow to process the issues.'
+    required: false
+    default: 'true'
   # Pull request inputs
   pull-request-stale-label:
     description: 'The label that will be added to the pull request when it is stale.'
@@ -117,6 +121,10 @@ inputs:
     description: 'A list of labels added when the processing stale the pull request (multiline).'
     required: false
     default: ''
+  pull-request-processing:
+    description: 'Allow to process the pull requests.'
+    required: false
+    default: 'true'
 runs:
   using: 'node12'
   main: 'dist/index.js'
