feat(draft): add new input to convert a pull request to draft instead of stale
The input `pull-request-to-draft-instead-of-stale` was added.
When enabled, the processing will no longer stale.
It will instead convert the pull request to a draft.
No stale label added, no stale comment added nor extra labels added.
Closes #275

--- a/action.yml
+++ b/action.yml
@@ -125,6 +125,10 @@ inputs:
     description: 'Allow to process the pull requests.'
     required: false
     default: 'true'
+  pull-request-to-draft-instead-of-stale:
+    description: 'Convert the pull request to a draft pull request instead of handling it as a stale candidate.'
+    required: false
+    default: 'false'
 runs:
   using: 'node12'
   main: 'dist/index.js'
