feat(labels): add new input to add extra labels after closing an item
The input `issue-add-labels-after-close` and `pull-request-add-labels-after-close` were added.
You can now define a list of extra labels to add when the processing close an item.
Closes #213

--- a/action.yml
+++ b/action.yml
@@ -60,6 +60,10 @@ inputs:
     description: 'A list of labels added when the processing stale the issue (multiline).'
     required: false
     default: ''
+  issue-add-labels-after-close:
+    description: 'A list of labels added when the processing close the issue (multiline).'
+    required: false
+    default: ''
   issue-processing:
     description: 'Allow to process the issues.'
     required: false
@@ -119,6 +123,10 @@ inputs:
     default: 'false'
   pull-request-add-labels-after-stale:
     description: 'A list of labels added when the processing stale the pull request (multiline).'
+    required: false
+    default: ''
+  pull-request-add-labels-after-close:
+    description: 'A list of labels added when the processing close the pull request (multiline).'
     required: false
     default: ''
   pull-request-processing:
