--- a/documentation/package.json
+++ b/documentation/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "start:french": "npm run start -- --locale fr",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
+    "write-translations:french": "npm run write-translations -- --locale fr",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
   },
