--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: npm
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v2
@@ -68,6 +69,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: npm
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v2
@@ -113,6 +115,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: npm
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v2
@@ -160,6 +163,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: npm
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v2
@@ -207,6 +211,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: npm
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v2
@@ -254,6 +259,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: npm
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v2
@@ -279,3 +285,31 @@ jobs:
             echo "dist has changed. Run the npm script build locally to build the distribution and then push the changes."
             exit 1
           fi
+  Website:
+    needs: PreJob
+    if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.17.6
+          cache: npm
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm ci
+      - name: Build website
+        working-directory: documentation
+        run: npm run build
