--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,17 +25,13 @@ jobs:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version:
-          - 12.22.x
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.22.x
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12.22.x
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -58,17 +54,13 @@ jobs:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version:
-          - 12.22.x
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.22.x
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12.22.x
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -104,17 +96,13 @@ jobs:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version:
-          - 12.22.x
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.22.x
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12.22.x
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -152,17 +140,13 @@ jobs:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version:
-          - 12.22.x
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.22.x
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12.22.x
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -200,17 +184,13 @@ jobs:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version:
-          - 12.22.x
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.22.x
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12.22.x
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -248,17 +228,13 @@ jobs:
     needs: PreJob
     if: ${{ needs.PreJob.outputs.SHOULD_SKIP != 'true' }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version:
-          - 12.22.x
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12.22.x
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12.22.x
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -292,7 +268,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 14.17.6
         uses: actions/setup-node@v2
         with:
           node-version: 14.17.6
