--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "scripts": {
     "\n# BUILD SCRIPTS:": "",
     "build": "npm run clean:dist && ncc build --license licenses.txt --minify",
-    "build:dirty": "ncc build --license licenses.txt --minify",
+    "build:dirty": "ncc build src/main.ts --license licenses.txt --minify",
     "\n# TEST SCRIPTS:": "",
     "test": "jest",
     "test:watch": "jest --watch-all",
