build(ci): use consistent npm install commands

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,13 +39,18 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node_modules
+          path: |
+            node_modules
+            documentation/node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+        run: |
+          npm ci
+          cd documentation
+          npm ci
       - name: Lint ts
         run: npm run lint:ts:ci
       - name: Lint other
@@ -68,13 +73,18 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node_modules
+          path: |
+            node_modules
+            documentation/node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+        run: |
+          npm ci
+          cd documentation
+          npm ci
       - name: Cache Jest
         id: cache-jest
         uses: actions/cache@v2
@@ -110,13 +120,18 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node_modules
+          path: |
+            node_modules
+            documentation/node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+        run: |
+          npm ci
+          cd documentation
+          npm ci
       - name: Cache Jest
         id: cache-jest
         uses: actions/cache@v2
@@ -154,13 +169,18 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node_modules
+          path: |
+            node_modules
+            documentation/node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+        run: |
+          npm ci
+          cd documentation
+          npm ci
       - name: Cache Jest
         id: cache-jest
         uses: actions/cache@v2
@@ -198,13 +218,18 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          path: node_modules
+          path: |
+            node_modules
+            documentation/node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+        run: |
+          npm ci
+          cd documentation
+          npm ci
       - name: Cache Jest
         id: cache-jest
         uses: actions/cache@v2
@@ -278,19 +303,25 @@ jobs:
         with:
           node-version: 14.17.6
           cache: npm
-      - name: Cache website node_modules
-        id: cache-documentation-node-modules
+      - name: Cache node_modules
+        id: cache-node-modules
         uses: actions/cache@v2
         env:
-          cache-name: cache-documentation-node-modules
+          cache-name: cache-node-modules
         with:
-          path: documentation/node_modules
+          path: |
+            node_modules
+            documentation/node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
       - name: Install dependencies
-        if: steps.cache-documentation-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: |
+          npm ci
+          cd documentation
+          npm ci
       - name: Build website
-        working-directory: documentation
-        run: npm run build
+        run: |
+          cd documentation
+          npm run build
