--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,7 @@ end_of_line = lf
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.mdx]
+max_line_length = off
+trim_trailing_whitespace = false
