--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 12.22.x
+      - name: Use Node.js 12.22.9
         uses: actions/setup-node@v2
         with:
-          node-version: 12.22.x
+          node-version: 12.22.9
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -62,10 +62,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 12.22.x
+      - name: Use Node.js 12.22.9
         uses: actions/setup-node@v2
         with:
-          node-version: 12.22.x
+          node-version: 12.22.9
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -109,10 +109,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 12.22.x
+      - name: Use Node.js 12.22.9
         uses: actions/setup-node@v2
         with:
-          node-version: 12.22.x
+          node-version: 12.22.9
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -158,10 +158,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 12.22.x
+      - name: Use Node.js 12.22.9
         uses: actions/setup-node@v2
         with:
-          node-version: 12.22.x
+          node-version: 12.22.9
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -207,10 +207,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 12.22.x
+      - name: Use Node.js 12.22.9
         uses: actions/setup-node@v2
         with:
-          node-version: 12.22.x
+          node-version: 12.22.9
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
@@ -256,10 +256,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 12.22.x
+      - name: Use Node.js 12.22.9
         uses: actions/setup-node@v2
         with:
-          node-version: 12.22.x
+          node-version: 12.22.9
           cache: npm
       - name: Cache node_modules
         id: cache-node-modules
