--- a/.releaserc.json
+++ b/.releaserc.json
@@ -17,6 +17,10 @@
           {
             "type": "perf",
             "release": "patch"
+          },
+          {
+            "type": "docs",
+            "release": "minor"
           }
         ],
         "parserOpts": {
