chore(changelog): allow to write docs commits on the changelog

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -43,7 +43,10 @@
         "linkReferences": true,
         "includeDetails": true,
         "commit": "commit",
-        "issue": "issues"
+        "issue": "issues",
+        "presetConfig": {
+          "types": ["feat", "fix", "perf", "docs", "revert"]
+        }
       }
     ],
     [
