--- a/.github/issue_label_bot.yaml
+++ b/.github/issue_label_bot.yaml
@@ -1,4 +1,4 @@
 label-alias:
-  bug: 'bug'
-  feature_request: 'feature-request'
-  question: 'question'
+  bug: 'bug: bug:'
+  feature_request: 'feature-request :rocket:'
+  question: 'question :question:'
