--- a/.github/workflows/merge-develop-into-master.yml
+++ b/.github/workflows/merge-develop-into-master.yml
@@ -5,7 +5,7 @@ on:
       - develop
 jobs:
   HasLabel:
-    name: Check if the push contains the label "merge-into-master"
+    name: Check if the push contains the label "merge-into-master :crown:"
     runs-on: ubuntu-latest
     outputs:
       HAS_LABEL: ${{ steps.save-has-label.outputs.HAS_LABEL }}
@@ -15,16 +15,16 @@ jobs:
         uses: shioyang/check-pr-labels-on-push-action@6902edf856909c50ff1d69b2cd7dc0d82f1061b6 # renovate: tag=v1.0.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          labels: '["merge-into-master"]'
+          labels: '["merge-into-master :crown:"]'
       - name: Save has label result
         id: save-has-label
         run: echo '::set-output name=HAS_LABEL::${{ steps.check_labels.outputs.result }}'
       - name: Label present
         if: steps.check_labels.outputs.result == 'true'
-        run: echo 'The label "merge-into-master" is present'
+        run: echo 'The label "merge-into-master :crown:" is present'
       - name: Label missing
         if: steps.check_labels.outputs.result == 'false'
-        run: echo 'The label "merge-into-master" is missing'
+        run: echo 'The label "merge-into-master :crown:" is missing'
   PR:
     runs-on: ubuntu-latest
     needs: [HasLabel]
@@ -53,9 +53,9 @@ jobs:
           title: 'chore(master): merge develop into master'
           branch: feature/merge-develop-into-master
           assignees: C0ZEN
-          labels: auto-merge
+          labels: 'auto-merge :ok:'
           commit-message: 'chore(master): merge develop into master'
           body: |
-            :tada: This PR was generated after pushing into develop with the label "merge-into-master" :tada:
+            :tada: This PR was generated after pushing into develop with the label "merge-into-master :crown:" :tada:
 
             Your **github-actions** bot :rocket:
