chore(labels): change the labels added when semantic release fail

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -69,7 +69,12 @@
         "message": "build(release): new version ${nextRelease.version}"
       }
     ],
-    "@semantic-release/github"
+    [
+      "@semantic-release/github",
+      {
+        "labels": ["semantic-release :package:"]
+      }
+    ]
   ],
   "dryRun": false,
   "ci": true,
