chore(labels): change the labels added when semantic release succeed

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -72,7 +72,8 @@
     [
       "@semantic-release/github",
       {
-        "labels": ["semantic-release :package:"]
+        "labels": ["semantic-release :package:"],
+        "releasedLabels": ["released :package:"]
       }
     ]
   ],
