feat(prs): add new input `pull-request-limit-api-queries-count`
Before processing each pull request, the workflow will check if the input is enabled.
If this is the case, the processing may stop if the statistics for queries are higher than the limit.
Closes #254

--- a/action.yml
+++ b/action.yml
@@ -141,6 +141,10 @@ inputs:
     description: 'Convert the pull request to a draft pull request instead of handling it as a stale candidate.'
     required: false
     default: 'false'
+  pull-request-limit-api-queries-count:
+    description: 'Limit the quantity of API queries calls performed during the processing of pull requests (-1 for unlimited).'
+    required: false
+    default: '-1'
 outputs:
   # Issues outputs
   processed-issues-count:
