--- a/action.yml
+++ b/action.yml
@@ -72,6 +72,10 @@ inputs:
     description: 'Limit the quantity of API queries calls performed during the processing of issues (-1 for unlimited).'
     required: false
     default: '-1'
+  issue-limit-api-mutations-count:
+    description: 'Limit the quantity of API mutations calls performed during the processing of issues (-1 for unlimited).'
+    required: false
+    default: '-1'
   # Pull request inputs
   pull-request-stale-label:
     description: 'The label that will be added to the pull request when it is stale.'
