feat(prs): add new input `pull-request-limit-api-mutations-count`
Before processing each pull request, the workflow will check if the input is enabled.
If this is the case, the processing may stop if the statistics for mutations are higher than the limit.
Closes #389

--- a/action.yml
+++ b/action.yml
@@ -149,6 +149,10 @@ inputs:
     description: 'Limit the quantity of API queries calls performed during the processing of pull requests (-1 for unlimited).'
     required: false
     default: '-1'
+  pull-request-limit-api-mutations-count:
+    description: 'Limit the quantity of API mutations calls performed during the processing of pull requests (-1 for unlimited).'
+    required: false
+    default: '-1'
 outputs:
   # Issues outputs
   processed-issues-count:
