--- a/.github/workflows/merge-develop-into-master.yml
+++ b/.github/workflows/merge-develop-into-master.yml
@@ -55,6 +55,8 @@ jobs:
           assignees: C0ZEN
           labels: 'auto-merge :ok:'
           commit-message: 'chore(master): merge develop into master'
+          committer: ${{ secrets.GIT_COMMITTER_NAME }} <${{ secrets.GIT_COMMITTER_EMAIL }}>
+          author: ${{ secrets.GIT_AUTHOR_NAME }} <${{ secrets.GIT_AUTHOR_EMAIL }}>
           body: |
             [~merge-into-master :crown:]: https://img.shields.io/badge/-merge%20into%20master-303952.svg
 
