build(gh-pages): change the commiter and author names when deploying gh-pages

--- a/.github/workflows/merge-develop-into-master.yml
+++ b/.github/workflows/merge-develop-into-master.yml
@@ -62,4 +62,4 @@ jobs:
 
             :tada: This PR was generated after pushing into develop with the label [![label: merge-into-master :crown:][~merge-into-master :crown:]](https://github.com/Sonia-corporation/stale/labels/merge-into-master%20%3Acrown%3A) :tada:
 
-            Your **github-actions** bot :rocket:
+            Your **Sonia** bot :rocket:
