--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,12 +102,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./documentation/build
-          # Assign commit authorship to the official GH-Actions bot for deploys to `gh-pages` branch:
-          # https://github.com/actions/checkout/issues/13#issuecomment-724415212
-          # The GH actions bot is used by default if you didn't specify the two fields.
-          # You can swap them out with your own user credentials.
-          user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+          user_name: ${{ secrets.GIT_COMMITTER_NAME }}
+          user_email: ${{ secrets.GIT_COMMITTER_EMAIL }}
   PR:
     runs-on: ubuntu-latest
     needs: [CurrentTag, Release]
@@ -152,4 +148,4 @@ jobs:
             - [npm package (@latest dist-tag)](https://www.npmjs.com/package/@sonia-corporation/stale/v/${{ steps.latest-tag.outputs.tag }})
             - [GitHub release](https://github.com/Sonia-corporation/stale/releases/tag/${{ steps.latest-tag.outputs.tag }})
 
-            Your **github-actions** bot :rocket:
+            Your **Sonia** bot :rocket:
