build(release): change the release type for docs with fix scope to use a patch

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -16,7 +16,17 @@
           },
           {
             "type": "perf",
-            "release": "patch"
+            "release": "minor"
+          },
+          {
+            "type": "docs",
+            "release": "patch",
+            "scope": "fix"
+          },
+          {
+            "type": "docs",
+            "release": "typo",
+            "scope": "fix"
           },
           {
             "type": "docs",
