--- a/.releaserc.json
+++ b/.releaserc.json
@@ -25,8 +25,8 @@
           },
           {
             "type": "docs",
-            "release": "typo",
-            "scope": "fix"
+            "release": "patch",
+            "scope": "typo"
           },
           {
             "type": "docs",
