build(release): only create a minor for docs type when the scope is not fix or typo

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -30,7 +30,8 @@
           },
           {
             "type": "docs",
-            "release": "minor"
+            "release": "minor",
+            "scope": "!(fix|typo)"
           }
         ],
         "parserOpts": {
